--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,3 +4,7 @@
 @import './base/typography';
 
 @import './layout/footer';
+@import './layout/nav';
+@import './layout/page';
+
+@import './pages/tasks';
