--- a/public/css/app.css
+++ b/public/css/app.css
@@ -68,6 +68,9 @@ nav {
 .tasks table th {
   font-weight: 500;
 }
+.tasks table th:nth-of-type(2) {
+  width: 100%;
+}
 .tasks table td {
   vertical-align: middle !important;
 }
@@ -97,4 +100,8 @@ nav {
   .tasks table td:last-of-type {
     min-width: 100px;
   }
+}
+.tasks .no-tasks {
+  margin: 0;
+  font-weight: 500;
 }
